internal-gateway/v1alpha2/i-gw-httproute-split.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: internal-httproute-split
spec:
  parentRefs:
    - name: internal-gateway
  hostnames:
    - "i-gw.gcpx.org"
  rules:
    - backendRefs:
        - name: whereami-v1
          port: 8080
          weight: 40
        - name: whereami-v2
          port: 8080
          weight: 30
        - name: whereami-v3
          port: 8080
          weight: 30
