internal-gateway/v1alpha2/i-gw-httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: internal-httproute
spec:
  parentRefs:
    - name: internal-gateway
  hostnames:
    - "i-gw.gcpx.org"
  rules:
    - backendRefs:
        - name: whereami-v1
          port: 8080
    - matches:
        - headers:
            - type: Exact
              name: env
              value: v2
      backendRefs:
        - name: whereami-v2
          port: 8080
    - matches:
        - path:
            type: Exact
            value: /version
      backendRefs:
        - name: whereami-v3
          port: 8080
